[package]
name = "msp-operator"
version = "0.1.0"
edition = "2018"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]

[dependencies]
anyhow = "1.0.43"
bytes = "1.1.0"
chrono = "0.4.19"
clap =  { version = "2.33.3", features = ["color"] }
futures = "0.3.17"
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.60.0", features = ["derive" ] }
kube-runtime = "0.60.0"
log = "0.4.14"
prost = "0.8.0"
prost-derive = "0.8.0"
reqwest = { version = "0.11.4", features = ["json"] }
schemars = "0.8.3"
serde = "1.0.130"
serde_json = "1.0.67"
serde_yaml = "0.8.20"
snafu = "0.6.10"
tokio = { version = "1.11.0", features = ["full"] }
tonic = "0.5.2"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
url = "2.2.2"
openapi = { path = "../../openapi"}
common-lib = { path = "../../common" }
humantime = "2.1.0"

# Tracing
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.15.0"
opentelemetry = { version = "0.16.0", features = ["rt-tokio-current-thread"] }

[build-dependencies]
tonic-build = { version = "0.5.2", features = ["prost" ] }