[package]
name = "msp-operator"
description = "Disk Pool Operator"
version = "1.0.0"
edition = "2018"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
clap =  { version = "2.33.3", features = ["color"] }
futures = "0.3.17"
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.60.0", features = ["derive" ] }
kube-runtime = "0.60.0"
schemars = "0.8.5"
serde = "1.0.130"
serde_json = "1.0.68"
serde_yaml = "0.8.21"
snafu = "0.6.10"
tokio = { version = "1.12.0", features = ["full"] }
openapi = { path = "../../openapi", default-features = false, features = [ "tower-client", "tower-trace" ] }
humantime = "2.1.0"
utils = { path = "../../utils/utils-lib" }

# Tracing
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.15.0"
opentelemetry = { version = "0.16.0", features = ["rt-tokio-current-thread"] }
