[package]
name = "rest-plugin"
description = "Rest Plugin"
version = "1.0.0"
edition = "2018"

[[bin]]
name = "rest-plugin"

[lib]
name = "plugin"
path = "./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "rls" ]
rls = [ "openapi/tower-client-rls" ]
tls = [ "openapi/tower-client-tls" ]

[dependencies]
openapi = { path = "../../openapi", default-features = false, features = [ "tower-trace" ] }
utils = { path = "../../utils/utils-lib" }
strum = "0.21.0"
strum_macros = "0.21.0"
tokio = { version = "1.20.1" }
anyhow = "1.0.44"
async-trait = "0.1.51"
once_cell = "1.8.0"
clap =  { version = "3.1.5", features = ["color", "derive"] }
prettytable-rs = "0.8.0"
lazy_static = "1.4.0"
serde = "1.0.140"
serde_json = "1.0.82"
serde_yaml = "0.8.26"
humantime = "2.1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde_derive = "1.0.140"

# Tracing
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = [ "env-filter" ] }
tracing-opentelemetry = "0.17.4"
opentelemetry = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio-current-thread"] }

[dev-dependencies]
# Test dependencies
shutdown_hooks = "0.1.0"
deployer-cluster = { path = "../../utils/deployer-cluster" }
gag = "1.0.0"
