[package]
name = "rest-plugin"
description = "Rest Plugin"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rest-plugin"

[lib]
name = "plugin"
path = "./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "rls" ]
rls = [ "openapi/tower-client-rls" ]
tls = [ "openapi/tower-client-tls" ]

[dependencies]
openapi = { path = "../../openapi", default-features = false, features = [ "tower-trace" ] }
utils = { path = "../../utils/utils-lib" }
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.32.0" }
anyhow = "1.0.75"
async-trait = "0.1.73"
once_cell = "1.18.0"
clap = { version = "4.4.6", features = ["color", "derive", "string"] }
prettytable-rs = "0.10.0"
lazy_static = "1.4.0"
serde = "1.0.188"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
humantime = "2.1.0"
chrono = "0.4.31"

[dev-dependencies]
# Test dependencies
shutdown_hooks = "0.1.0"
deployer-cluster = { path = "../../utils/deployer-cluster" }
gag = "1.0.0"
