[package]
name = "rest"
description = "Control plane REST server"
version = "1.0.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rest"
path = "./service/src/main.rs"

[lib]
name = "rest_client"
path = "./src/lib.rs"

[dependencies]
# Actix Server, telemetry
rustls = "0.20.8"
rustls-pemfile = "1.0.3"
actix-web = { version = "4.3.1", features = ["rustls"] }
actix-service = "2.0.2"
opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
actix-web-opentelemetry = "0.13.0"
tracing = "0.1.37"
once_cell = "1.18.0"
async-trait = "0.1.72"
serde_json = { version = "1.0.104", features = ["preserve_order"] }
serde_yaml = "0.9.25"
clap = { version = "4.3.21", features = ["color", "derive", "env", "string"] }
futures = "0.3.28"
anyhow = "1.0.72"
snafu = "0.7.5"
url = "2.4.0"
http = "0.2.9"
tinytemplate = "1.2.1"
jsonwebtoken = "8.3.0"
stor-port = { path = "../stor-port" }
utils = { path = "../../utils/utils-lib" }
humantime = "2.1.0"
grpc = { path = "../grpc" }
num_cpus = "1.16.0"

[dev-dependencies]
tokio = { version = "1.30.0", features = ["full"] }
composer = { path = "../../utils/dependencies/composer", default-features = false }
deployer-cluster = { path = "../../utils/deployer-cluster" }

[dependencies.serde]
features = ["derive"]
version = "1.0.183"
