[package]
name = "stor-port"
version = "0.1.0"
edition = "2021"
description = "Persistent store and transport associated information for the control-plane"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4"] }
strum = "0.24.1"
strum_macros = "0.24.3"
serde_json = "1.0.93"
percent-encoding = "2.2.0"
tokio = { version = "1.25.0", features = [ "full" ] }
snafu = "0.7.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_tuple = "0.5.0"
async-trait = "0.1.64"
dyn-clonable = "0.9.0"
rand = "0.8.5"
tonic = "0.8.3"
chrono = { version = "0.4.23", features = ["serde"] }
tracing = "0.1.37"

openapi = { path = "../../openapi", features = [ "actix-server", "tower-client", "tower-trace" ] }
platform = { path = "../../utils/platform" }
pstor = { path = "../../utils/pstor" }