[package]
name = "store"
version = "0.1.0"
authors = ["Paul Yoong <paul.yoong@mayadata.io>"]
edition = "2018"
description = "A key-value store"

[dependencies]
etcd-client = "0.5.5"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.36"
snafu = "0.6"
tracing = "0.1"
strum = "0.19"
strum_macros = "0.19"
types = { path = "../types" }

[dev-dependencies]
composer = { path = "../../composer" }
oneshot = "0.1.2"