[package]
name = "types"
version = "0.1.0"
authors = ["paul <paul.yoong@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paperclip = { version = "0.5.0", features = ["actix3"] }
url = "2.2.0"
uuid = { version = "0.7", features = ["v4"] }
strum = "0.19"
strum_macros = "0.19"
serde_json = "1.0"
percent-encoding = "2.1.0"
tracing = "0.1"
tokio = { version = "0.2", features = ["full"] }
snafu = "0.6"
async-trait = "0.1.36"
etcd-client = "0.5.5"

[dependencies.serde]
features = ["derive"]
version = "1.0"
