[package]
name = "kube-forward"
description = "A low-level Kubernetes forwarding library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.74.0", features = [ "ws" ] }
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_20"] }
tokio = { version = "1.25.0", features = [ "full" ] }
tokio-stream = { version = "0.1.11", features = ["net"] }
futures = "0.3.26"
anyhow = "1.0.69"
tracing = "0.1.37"
shutdown = { path = "../../utils/shutdown" }
serde_json = "1.0.93"
hyper = { version = "0.14.24", features = [ "client", "http1", "http2", "tcp", "stream" ] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
