[package]
name = "k8s-operators"
description = "K8S Operator"
version = "1.0.0"
edition = "2018"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]

[[bin]]
name = "operator-diskpool"
path = "src/diskpool/main.rs"

[lib]
name = "k8s_operators"
path = "src/lib.rs"


[features]
default = [ "rls" ]
rls = [ "openapi/tower-client-rls" ]
tls = [ "openapi/tower-client-tls" ]


[dependencies]
openapi = { path = "../../openapi", default-features = false, features = [ "tower-client", "tower-trace" ] }
utils = { path = "../../utils/utils-lib" }
anyhow = "1.0.69"
chrono = "0.4.23"
clap =  { version = "4.1.4", features = ["color", "env", "string"] }
futures = "0.3.26"
k8s-openapi = { version = "0.17.0", features = ["v1_20"] }
kube = { version = "0.78.0", features = ["derive", "runtime"] }
schemars = "0.8.11"
serde = "1.0.152"
serde_json = "1.0.93"
snafu = "0.7.4"
tokio = { version = "1.25.0", features = ["full"] }
humantime = "2.1.0"
tracing = "0.1.37"
