[package]
name = "k8s-operators"
description = "K8S Operator"
version = "1.0.0"
edition = "2018"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]

[[bin]]
name = "operator-diskpool"
path = "src/pool/main.rs"

[lib]
name = "k8s_operators"
path = "src/lib.rs"


[features]
default = [ "rls" ]
rls = [ "openapi/tower-client-rls" ]
tls = [ "openapi/tower-client-tls" ]


[dependencies]
openapi = { path = "../../openapi", default-features = false, features = [ "tower-client", "tower-trace" ] }
utils = { path = "../../utils/utils-lib" }
anyhow = "1.0.75"
chrono = "0.4.31"
clap =  { version = "4.4.6", features = ["color", "env", "string"] }
futures = "0.3.28"
k8s-openapi = { version = "0.20.0", features = ["v1_22"] }
kube = { version = "0.85.0", features = ["derive", "runtime"] }
schemars = "0.8.15"
serde = "1.0.188"
serde_json = "1.0.107"
snafu = "0.7.5"
tokio = { version = "1.32.0", features = ["full"] }
humantime = "2.1.0"
tracing = "0.1.37"
