[package]
name = "kubectl-plugin"
description = "Kubectl Plugin"
version = "1.0.0"
edition = "2018"

[[bin]]
name = "kubectl-mayastor"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "rls" ]
rls = [ "openapi/tower-client-rls", "rest-plugin/rls" ]
tls = [ "openapi/tower-client-tls", "rest-plugin/rls" ]

[dependencies]
openapi = { path = "../../openapi", default-features = false, features = [ "tower-trace" ] }
utils = { path = "../../utils/utils-lib" }
rest-plugin = { path = "../../control-plane/plugin", default-features = false }
kube = { version = "0.74.0", features = [ "derive" ] }
supportability = { path = "../supportability" }
kube-proxy = { path = "../proxy" }
tokio = { version = "1.20.1" }
anyhow = "1.0.44"
clap = { version = "3.1.5", features = ["color", "derive"] }
humantime = "2.1.0"
shutdown = { path = "../../utils/shutdown" }
maplit = "1.0.2"
k8s-openapi = { version = "0.15.0", features = ["v1_20"] }
actix-rt = "2.7.0"
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
hyper = { version = "0.14.20", features = [ "client", "http1", "http2", "tcp", "stream" ] }
http = "0.2.6"
async-trait = "0.1.51"
serde = "1.0.140"
serde_json = "1.0.82"


# Tracing
tracing = "0.1.35"
opentelemetry = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
