[package]
name = "kube-proxy"
version = "0.1.0"
edition = "2021"
description = "Kubernetes OpenApi Client via k8s-proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "rls" ]
rls = [ "openapi/tower-client-rls", "rest-plugin/rls" ]
tls = [ "openapi/tower-client-tls", "rest-plugin/rls" ]

[dependencies]
openapi = { path = "../../openapi", default-features = false, features = [ "tower-trace" ] }
utils = { path = "../../utils/utils-lib" }
rest-plugin = { path = "../../control-plane/plugin", default-features = false }
kube = { version = "0.74.0", features = [ "derive" ] }
anyhow = "1.0.44"
kube-forward = { path = "../forward" }
