[package]
name = "supportability-tool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kubectl-support"
path = "src/main.rs"

[dependencies]
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"]}
kube = { version = "0.67.0", features = ["derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
openapi = { path = "../../openapi", default-features = false, features = [ "tower-client", "tower-trace" ] }
yaml-rust = { version = "0.4" }
structopt = "0.3.26"
humantime = "2.1.0"
async-trait = "0.1.51"
prettytable-rs = "^0.8"
serde = "1.0.130"
serde_json = "1.0.59"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
once_cell = "1.8.0"
tar = "0.4"
flate2 = { version = "0.2", features = ["tokio"] }
chrono = "0.4.19"
urlencoding = "2.1.0"
reqwest = { version = "0.11", features = ["json"] }
downcast-rs = "1.2.0"
