[package]
name = "supportability"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "supportability"
path = "src/lib.rs"

[features]
default = [ "rls" ]
rls = [ "openapi/tower-client-rls" ]
tls = [ "openapi/tower-client-tls" ]

[dependencies]
kube-proxy = { path = "../proxy" }
futures = "0.3"
tokio = { version = "1.20.1", features = ["full"] }
k8s-openapi = { version = "0.15.0", features = ["v1_20"] }
kube = { version = "0.74.0", features = ["derive"] }
common-lib = { path = "../../common" }
openapi = { path = "../../openapi", default-features = false, features = [ "tower-client", "tower-trace" ] }
yaml-rust = { version = "0.4" }
clap = { version = "3.1.5", features = ["color", "derive"] }
anyhow = "1.0.44"
humantime = "2.1.0"
async-trait = "0.1.51"
prettytable-rs = "^0.8"
serde = "1.0.140"
serde_json = "1.0.82"
serde_yaml = "0.8.26"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
once_cell = "1.8.0"
tar = "0.4"
flate2 = { version = "1.0.24" }
chrono = "0.4.19"
urlencoding = "2.1.0"
downcast-rs = "1.2.0"
schemars = "0.8.10"
k8s-operators = { path = "../operators" }
http = "0.2.6"
hyper = { version = "0.14.20", features = [ "client", "http1", "http2", "tcp", "stream" ] }
tower = { version = "0.4.13", features = [ "timeout", "util" ] }