[package]
name = "io-engine-tests"
version = "1.0.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"
description = "Control Plane 'Compose' Tests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "testlib"
path = "src/lib.rs"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }
openapi = { path = "../../openapi", features = [ "tower-client", "tower-trace" ] }
deployer-cluster = { path = "../../utils/deployer-cluster" }
common-lib = { path = "../../common" }
rpc = { path = "../../rpc" }
grpc = { path = "../../control-plane/grpc" }
tracing = "0.1.37"
