[package]
name = "ctrlp-tests"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"
description = "Control Plane 'Compose' Tests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "testlib"
path = "src/lib.rs"

[dependencies]
composer = { path = "../../composer" }
deployer = { path = "../../deployer" }
rest = { path = "../../control-plane/rest" }
actix-rt = "2.2.0"
anyhow = "1.0.44"
common-lib = { path = "../../common" }
structopt = "0.3.23"
backtrace = "0.3.61"

# Tracing
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.15.0"
opentelemetry = { version = "0.16.0", features = ["rt-tokio-current-thread"] }
actix-web-opentelemetry = "0.11.0-beta.5"
