[package]
name = "deployer-cluster"
version = "1.0.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2021"
description = "Create and Manage local deployer clusters"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
openapi = { path = "../../openapi", features = [ "tower-client", "tower-trace" ] }
composer = { path = "../../utils/dependencies/composer", default-features = false }
deployer = { path = "../../deployer" }
rpc = { path = "../../rpc" }
utils = { path = "../../utils/utils-lib" }
anyhow = "1.0.44"
common-lib = { path = "../../common" }
structopt = "0.3.23"
backtrace = "0.3.61"
etcd-client = "0.10.1"
grpc = { path = "../../control-plane/grpc" }
tonic = "0.5.2"
# Tracing
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = [ "env-filter" ] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.17.4"
opentelemetry = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
