[package]
name = "deployer-cluster"
version = "1.0.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2021"
description = "Create and Manage local deployer clusters"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
openapi = { path = "../../openapi", features = [ "tower-client", "tower-trace" ] }
composer = { path = "../../utils/dependencies/composer", default-features = false }
deployer = { path = "../../deployer" }
rpc = { path = "../../rpc" }
csi-driver = { path = "../../control-plane/csi-driver" }
utils = { path = "../../utils/utils-lib" }
anyhow = "1.0.75"
stor-port = { path = "../../control-plane/stor-port" }
clap = { version = "4.4.6", features = ["derive", "env", "string"] }
backtrace = "0.3.69"
etcd-client = "0.10.4"
grpc = { path = "../../control-plane/grpc" }
tonic = "0.8.3"
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
# Tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
