[package]
name = "platform"
version = "0.1.0"
edition = "2021"
description = "A library used to identify which platfrom we're running under."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.30.0", features = [ "full" ] }
k8s-openapi = { version = "0.17.0", features = ["v1_20"] }
kube = { version = "0.78.0", features = ["derive"] }
tracing = "0.1.37"
